Mid-Day 20160624 Need to fix spacing b/c not showing on safari right.  pics still aren't scaling right.  neither is actual page layout.

--- a/Working Files/GlossaryCSS.css
+++ b/Working Files/GlossaryCSS.css
@@ -14,7 +14,7 @@
     padding-top: 10px;
     font-size: 20px;
     color: black;
-    margin-left: -70px;
+    margin-left: -80px;
     }
 #glyph {
     padding: 2.25px;
@@ -22,7 +22,7 @@
 
 #sidebarnav {
     position: fixed;
-    bottom: 65%;
+    bottom: 50%;
     margin-left: -80px;
     float:left;
     width: 150px;
